--- a/src/pages/docs/justify-content.mdx
+++ b/src/pages/docs/justify-content.mdx
@@ -1,11 +1,6 @@
 ---
 title: "Justify Content"
-description: "Utilities for controlling how flex items are positioned along a container's main axis."
-features:
-  responsive: true
-  customizable: false
-  hover: false
-  focus: false
+description: "Utilities for controlling how flex and grid items are positioned along a container's main axis."
 ---
 
 import plugin from 'tailwindcss/lib/plugins/justifyContent'
@@ -17,7 +12,7 @@ export const classes = { plugin }
 
 ## Start
 
-Use `.justify-start` to justify items against the start of the flex container's main axis:
+Use `justify-start` to justify items against the start of the container's main axis:
 
 ```html
 <template preview>
@@ -31,7 +26,7 @@ Use `.justify-start` to justify items against the start of the flex container's 
 
 ## Center
 
-Use `.justify-center` to justify items along the center of the flex container's main axis:
+Use `justify-center` to justify items along the center of the container's main axis:
 
 ```html
 <template preview>
@@ -45,7 +40,7 @@ Use `.justify-center` to justify items along the center of the flex container's 
 
 ## End
 
-Use `.justify-end` to justify items against the end of the flex container's main axis:
+Use `justify-end` to justify items against the end of the container's main axis:
 
 ```html
 <template preview>
@@ -59,7 +54,7 @@ Use `.justify-end` to justify items against the end of the flex container's main
 
 ## Space between
 
-Use `.justify-between` to justify items along the flex container's main axis such that there is an equal amount of space between each item:
+Use `justify-between` to justify items along the container's main axis such that there is an equal amount of space between each item:
 
 ```html
 <template preview>
@@ -73,7 +68,7 @@ Use `.justify-between` to justify items along the flex container's main axis suc
 
 ## Space around
 
-Use `.justify-around` to justify items along the flex container's main axis such that there is an equal amount of space on each side of each item:
+Use `justify-around` to justify items along the container's main axis such that there is an equal amount of space on each side of each item:
 
 ```html
 <template preview>
@@ -87,7 +82,7 @@ Use `.justify-around` to justify items along the flex container's main axis such
 
 ## Space evenly
 
-Use `.justify-evenly` to justify items along the flex container's main axis such that there is an equal amount of space around each item, but also accounting for the doubling of space you would normally see between each item when using `justify-around`:
+Use `justify-evenly` to justify items along the container's main axis such that there is an equal amount of space around each item, but also accounting for the doubling of space you would normally see between each item when using `justify-around`:
 
 ```html
 <template preview>
