--- a/src/pages/docs/align-self.mdx
+++ b/src/pages/docs/align-self.mdx
@@ -1,11 +1,6 @@
 ---
 title: "Align Self"
-description: "Utilities for controlling how an individual flex item is positioned along its container's cross axis."
-features:
-  responsive: true
-  customizable: false
-  hover: false
-  focus: false
+description: "Utilities for controlling how an individual flex or grid item is positioned along its container's cross axis."
 ---
 
 import plugin from 'tailwindcss/lib/plugins/alignSelf'
@@ -17,7 +12,7 @@ export const classes = { plugin }
 
 ## Auto
 
-Use `.self-auto` to align an item based on the value of the flex container's `align-items` property:
+Use `self-auto` to align an item based on the value of the container's `align-items` property:
 
 ```html
 <template preview>
@@ -31,7 +26,7 @@ Use `.self-auto` to align an item based on the value of the flex container's `al
 
 ## Start
 
-Use `.self-start` to align an item to the start of the flex container's cross axis, despite the container's `align-items` value:
+Use `self-start` to align an item to the start of the container's cross axis, despite the container's `align-items` value:
 
 ```html
 <template preview>
@@ -45,7 +40,7 @@ Use `.self-start` to align an item to the start of the flex container's cross ax
 
 ## Center
 
-Use `.self-center` to align an item along the center of the flex container's cross axis, despite the container's `align-items` value:
+Use `self-center` to align an item along the center of the container's cross axis, despite the container's `align-items` value:
 
 ```html
 <template preview>
@@ -59,7 +54,7 @@ Use `.self-center` to align an item along the center of the flex container's cro
 
 ## End
 
-Use `.self-end` to align an item to the end of the flex container's cross axis, despite the container's `align-items` value:
+Use `self-end` to align an item to the end of the container's cross axis, despite the container's `align-items` value:
 
 ```html
 <template preview>
@@ -73,7 +68,7 @@ Use `.self-end` to align an item to the end of the flex container's cross axis, 
 
 ## Stretch
 
-Use `.self-stretch` to stretch an item to fill the flex container's cross axis, despite the container's `align-items` value:
+Use `self-stretch` to stretch an item to fill the container's cross axis, despite the container's `align-items` value:
 
 ```html
 <template preview>
