--- a/src/pages/docs/justify-items.mdx
+++ b/src/pages/docs/justify-items.mdx
@@ -1,13 +1,7 @@
 ---
 title: "Justify Items"
-description: "Utilities for controlling how grid items are aligned along their grid areas on the inline axis."
+description: "Utilities for controlling how grid items are aligned along their inline axis."
 featureVersion: "v1.8.0+"
-features:
-  responsive: true
-  customizable: false
-  hover: false
-  focus: false
-
 ---
 
 import plugin from 'tailwindcss/lib/plugins/justifyItems'
@@ -19,7 +13,7 @@ export const classes = { plugin }
 
 ## Auto
 
-Use `.justify-items-auto` to justify grid items automatically on their grid areas on the inline axis:
+Use `justify-items-auto` to justify grid items automatically on their inline axis:
 
 ```html
 <template preview>
@@ -36,7 +30,7 @@ Use `.justify-items-auto` to justify grid items automatically on their grid area
 
 ## Start
 
-Use `.justify-items-start` to justify grid items against the start of their grid areas on the inline axis:
+Use `justify-items-start` to justify grid items against the start of their inline axis:
 
 ```html
 <template preview>
@@ -53,7 +47,7 @@ Use `.justify-items-start` to justify grid items against the start of their grid
 
 ## End
 
-Use `.justify-items-end` to justify grid items against the end of their grid areas on the inline axis:
+Use `justify-items-end` to justify grid items against the end of their inline axis:
 
 ```html
 <template preview>
@@ -70,7 +64,7 @@ Use `.justify-items-end` to justify grid items against the end of their grid are
 
 ## Center
 
-Use `.justify-items-center` to justify grid items along their grid areas on the inline axis:
+Use `justify-items-center` to justify grid items along their inline axis:
 
 ```html
 <template preview>
@@ -87,7 +81,7 @@ Use `.justify-items-center` to justify grid items along their grid areas on the 
 
 ## Stretch
 
-Use `.justify-items-stretch` to stretch items along their grid areas on the inline axis:
+Use `justify-items-stretch` to stretch items along their inline axis:
 
 ```html
 <template preview>
@@ -106,26 +100,13 @@ Use `.justify-items-stretch` to stretch items along their grid areas on the inli
 
 To justify flex items at a specific breakpoint, add a `{screen}:` prefix to any existing utility class. For example, use `md:justify-items-center` to apply the `justify-items-center` utility at only medium screen sizes and above.
 
-For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
+```html
+<div class="justify-items-start md:justify-items-center">
+  <!-- ... -->
+</div>
+```
 
-<ResponsiveCodeSample
-  classNames={['justify-items-auto', 'justify-items-start', 'justify-items-end', 'justify-items-center', 'justify-items-stretch']}
-  snippet={(classNames) => `
-    <div class="${classNames} ...">
-      <!-- ... -->
-    </div>
-  `}
-  preview={(className) => (
-    <div className={`grid grid-cols-3 gap-4 h-48 ${className}`}>
-      <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">1</div>
-      <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">2</div>
-      <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">3</div>
-      <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">4</div>
-      <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">5</div>
-      <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">6</div>
-    </div>
-  )}
-/>
+For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
 
 ## Customizing
 
