--- a/src/pages/docs/adding-new-utilities.mdx
+++ b/src/pages/docs/adding-new-utilities.mdx
@@ -15,66 +15,27 @@ Deciding on the best way to extend a framework can be paralyzing, so here are so
 
 The easiest way to add your own utilities to Tailwind is to simply add them to your CSS.
 
-<TipGood>Add any custom utilities to the end of your CSS file</TipGood>
-
 ```css
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.rotate-0 {
-  transform: rotate(0deg);
-}
-.rotate-90 {
-  transform: rotate(90deg);
-}
-.rotate-180 {
-  transform: rotate(180deg);
-}
-.rotate-270 {
-  transform: rotate(270deg);
+@layer utilities {
+  .scroll-snap-none {
+    scroll-snap-type: none;
+  }
+  .scroll-snap-x {
+    scroll-snap-type: x;
+  }
+  .scroll-snap-y {
+    scroll-snap-type: y;
+  }
 }
 ```
 
-Since declaration order is important in CSS, always make sure you are adding new utilities to the _end_ of your CSS file to avoid specificity issues.
+By using the `@layer` directive, Tailwind will automatically move those styles to the same place as `@tailwind utilities` to avoid unintended specificity issues..
 
-<TipBad>Don't add custom utilities to the beginning of your CSS file</TipBad>
-
-```css
-/* Adding utilities to the beginning of your CSS can cause specificity issues */
-.rotate-0 {
-  transform: rotate(0deg);
-}
-.rotate-90 {
-  transform: rotate(90deg);
-}
-.rotate-180 {
-  transform: rotate(180deg);
-}
-.rotate-270 {
-  transform: rotate(270deg);
-}
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-```
-
-If you're using `postcss-import` or a preprocessor like Less, Sass, or Stylus, consider keeping your utilities in a separate file and importing them:
-
-```css
-/* Using postcss-import */
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
-@import "./custom-utilities.css";
-
-/* Using Sass or Less */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-@import "./custom-utilities";
-```
+Using the `@layer` directive will also instruct Tailwind to consider those styles for purging when purging the `utilities` layer. Read our [Controlling File Size](/docs/controlling-file-size) documentation for more details.
 
 ### Generating responsive variants
 
@@ -85,18 +46,17 @@ If you'd like to create [responsive variants](/docs/responsive-design) of your o
 @tailwind components;
 @tailwind utilities;
 
-@responsive {
-  .rotate-0 {
-    transform: rotate(0deg);
-  }
-  .rotate-90 {
-    transform: rotate(90deg);
-  }
-  .rotate-180 {
-    transform: rotate(180deg);
-  }
-  .rotate-270 {
-    transform: rotate(270deg);
+@layer utilities {
+  @responsive {
+    .scroll-snap-none {
+      scroll-snap-type: none;
+    }
+    .scroll-snap-x {
+      scroll-snap-type: x;
+    }
+    .scroll-snap-y {
+      scroll-snap-type: y;
+    }
   }
 }
 ```
@@ -104,8 +64,8 @@ If you'd like to create [responsive variants](/docs/responsive-design) of your o
 Tailwind will automatically generate prefixed versions of each custom utility that you can use to conditionally apply those styles at different breakpoints:
 
 ```html
-<!-- Rotate 180 degrees by default, but remove that rotation on medium screens and up -->
-<div class="rotate-180 md:rotate-0"></div>
+<!-- Use `scroll-snap-type: none` by default, then use `scroll-snap-type: x` on medium screens and up -->
+<div class="scroll-snap-none md:scroll-snap-x"></div>
 ```
 
 Learn more about responsive utilities in the [responsive design documentation](/docs/responsive-design).
@@ -119,18 +79,14 @@ If you'd like to create [pseudo-class variants](/docs/pseudo-class-variants) of 
 @tailwind components;
 @tailwind utilities;
 
-@variants hover, focus {
-  .rotate-0 {
-    transform: rotate(0deg);
-  }
-  .rotate-90 {
-    transform: rotate(90deg);
-  }
-  .rotate-180 {
-    transform: rotate(180deg);
-  }
-  .rotate-270 {
-    transform: rotate(270deg);
+@layer utilities {
+  @variants hover, focus {
+    .filter-none {
+      filter: none;
+    }
+    .filter-grayscale {
+      filter: grayscale(100%);
+    }
   }
 }
 ```
@@ -138,7 +94,7 @@ If you'd like to create [pseudo-class variants](/docs/pseudo-class-variants) of 
 Tailwind will automatically generate prefixed versions of each custom utility that you can use to conditionally apply those styles at different states:
 
 ```html
-<div class="rotate-0 hover:rotate-90"></div>
+<div class="filter-grayscale hover:filter-none"></div>
 ```
 
 Pseudo-class variants are generated in the same order you list them in the `@variants` directive, so if you'd like one pseudo-class to take precedence over another, make sure you list that one last:
@@ -146,16 +102,16 @@ Pseudo-class variants are generated in the same order you list them in the `@var
 ```css
 /* Focus will take precedence over hover */
 @variants hover, focus {
-  .rotate-0 {
-    transform: rotate(0deg);
+  .filter-grayscale {
+    filter: grayscale(100%);
   }
   /* ... */
 }
 
 /* Hover will take precedence over focus */
 @variants focus, hover {
-  .rotate-0 {
-    transform: rotate(0deg);
+  .filter-grayscale {
+    filter: grayscale(100%);
   }
   /* ... */
 }
@@ -168,19 +124,15 @@ If you'd like to generate both responsive _and_ pseudo-class variants of your cu
 @tailwind components;
 @tailwind utilities;
 
-@responsive {
-  @variants hover, focus {
-    .rotate-0 {
-      transform: rotate(0deg);
-    }
-    .rotate-90 {
-      transform: rotate(90deg);
-    }
-    .rotate-180 {
-      transform: rotate(180deg);
-    }
-    .rotate-270 {
-      transform: rotate(270deg);
+@layer utilities {
+  @responsive {
+    @variants hover, focus {
+      .filter-none {
+        filter: none;
+      }
+      .filter-grayscale {
+        filter: grayscale(100%);
+      }
     }
   }
 }
@@ -202,17 +154,11 @@ module.exports = {
   plugins: [
     plugin(function({ addUtilities }) {
       const newUtilities = {
-        '.rotate-0': {
-          transform: 'rotate(0deg)',
+        '.filter-none': {
+          filter: 'none',
         },
-        '.rotate-90': {
-          transform: 'rotate(90deg)',
-        },
-        '.rotate-180': {
-          transform: 'rotate(180deg)',
-        },
-        '.rotate-270': {
-          transform: 'rotate(270deg)',
+        'filter-grayscale': {
+          filter: 'grayscale(100%)',
         },
       }
 
