Update outdated file size reference in installation docs

--- a/src/pages/docs/installation.mdx
+++ b/src/pages/docs/installation.mdx
@@ -6,6 +6,7 @@ description: Quick start guide for installing and configuring Tailwind CSS.
 import { Heading } from '@/components/Heading'
 import { List, ListItemBad } from '@/components/List'
 import Link from 'next/link'
+import stats from '@/utils/stats'
 
 ## <Heading number="1">Install Tailwind via npm</Heading>
 
@@ -314,6 +315,8 @@ To pull in Tailwind for quick demos or just giving the framework a spin, grab th
 <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 ```
 
-Note that while the CDN build is large *(27kb compressed, 348kb raw)*, **it's not representative of the sizes you see when including Tailwind as part of your build process**.
+<p>
+  Note that while the CDN build is large <em>({stats.default.brotlified} compressed, {stats.default.minified} raw)</em>, <strong>it's not representative of the sizes you see when including Tailwind as part of your build process</strong>.
+</p>
 
 Sites that follow our [best practices](/docs/controlling-file-size) are almost always under 10kb compressed. For example, [Firefox Send](https://send.firefox.com/) is built with Tailwind and their CSS is under 4kb compressed and minified.
