--- a/src/pages/docs/controlling-file-size.mdx
+++ b/src/pages/docs/controlling-file-size.mdx
@@ -133,7 +133,7 @@ By default, Tailwind will purge styles in all of the `base`, `components`, and `
 // tailwind.config.js
 module.exports = {
   purge: {
-    layers: ['components', 'utilties'],
+    layers: ['components', 'utilities'],
     content: ['./src/**/*.html'],
   },
   // ...
